crates/ruff_python_parser/tests/snapshots/invalid_syntax@debug_shadow_try.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..44,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..43,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 5..8,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 5..8,
                                    },
                                ),
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 9..43,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 16..25,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: Some(
                                    Identifier {
                                        id: Name("__debug__"),
                                        range: 29..38,
                                        node_index: NodeIndex(None),
                                    },
                                ),
                                body: [
                                    Expr(
                                        StmtExpr {
                                            node_index: NodeIndex(None),
                                            range: 40..43,
                                            value: EllipsisLiteral(
                                                ExprEllipsisLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 40..43,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Semantic Syntax Errors

  |
1 | try: ...
2 | except Exception as __debug__: ...
  |                     ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
  |
