crates/ruff_python_parser/tests/snapshots/invalid_syntax@decorator_expression_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/decorator_expression_py38.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..89,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 45..88,
                    is_async: false,
                    decorator_list: [
                        Decorator {
                            range: 45..72,
                            node_index: NodeIndex(None),
                            expression: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 46..72,
                                    value: Attribute(
                                        ExprAttribute {
                                            node_index: NodeIndex(None),
                                            range: 46..64,
                                            value: Subscript(
                                                ExprSubscript {
                                                    node_index: NodeIndex(None),
                                                    range: 46..56,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 46..53,
                                                            id: Name("buttons"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    slice: NumberLiteral(
                                                        ExprNumberLiteral {
                                                            node_index: NodeIndex(None),
                                                            range: 54..55,
                                                            value: Int(
                                                                0,
                                                            ),
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                            attr: Identifier {
                                                id: Name("clicked"),
                                                range: 57..64,
                                                node_index: NodeIndex(None),
                                            },
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("connect"),
                                        range: 65..72,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Load,
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name("spam"),
                        range: 77..81,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 81..83,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 85..88,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 85..88,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: { "target-version": "3.8" }
2 | @buttons[0].clicked.connect
  |  ^^^^^^^^^^ Syntax Error: Cannot use subscript expression outside function call arguments in a decorator on Python 3.8 (syntax was added in Python 3.9)
3 | def spam(): ...
  |
